# scifir-biology

./: .gitignore  CMakeLists.txt  README.md  TODO biology.md  TODO.md  biology.hpp  main.cpp
.github/workflows/: cmake.yml
cells/: cell.cpp  cell.hpp  cell_info_data_source.hpp  embryo.cpp  embryo.hpp  material_tissue.hpp  tissue.hpp  tissue_info_data_source.hpp
dna/: chromosome.cpp  chromosome.hpp  custom_nbase.cpp  custom_nbase.hpp  dna.cpp  dna.hpp  dna_sequence.cpp  dna_sequence.hpp  extended_nbase.cpp  extended_nbase.hpp  full_gene.cpp  full_gene.hpp  gene.cpp  gene.hpp  generic_gene.cpp  generic_gene.hpp  generic_nbase.cpp  generic_nbase.hpp  generic_noncoding_sequence.cpp  generic_noncoding_sequence.hpp  genome.cpp  genome.hpp  genome_section.cpp  genome_section.hpp  nbase.cpp  nbase.hpp  nitrogenous_base.cpp  nitrogenous_base.hpp  noncoding_sequence.cpp  noncoding_sequence.hpp  rna.cpp  rna.hpp  ultimate_nbase.cpp  ultimate_nbase.hpp
extra/: FindLinuxDistribution.cmake
genes_collection/: gene_info.cpp  gene_info.hpp  gene_info_collection.cpp  gene_info_collection.hpp  gene_info_collection_data_source.hpp  gene_info_collection_source.hpp  genes_collection.cpp  genes_collection.hpp  genes_collection_data_source.cpp  genes_collection_data_source.hpp  genes_collection_genome.cpp  genes_collection_genome.hpp  genes_collection_genome_section.cpp  genes_collection_genome_section.hpp  genes_collection_source.cpp  genes_collection_source.hpp  genome_data_source.hpp  genome_source.hpp
species/: species_info.cpp  species_info.hpp  taxonomic_category.cpp  taxonomic_category.hpp
species_collection/: species_collection.hpp  species_collection_data_source.hpp  species_collection_source.hpp
taxonomy/: taxonomic_category.cpp  taxonomic_category.hpp
tests/: benchmark_nbase.cpp  dna_example.dnac  main_genetics.cpp  test_custom_nbase.cpp  test_generic_gene.cpp  test_generic_nbase.cpp
tests/dna/: test_custom_nbase.cpp  test_dna_sequence.cpp  test_extended_nbase.cpp  test_gene.cpp  test_generic_gene.cpp  test_generic_nbase.cpp  test_nbase.cpp
